@@ -1,5 +1,11 @@
 2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	* src/balsa-print-object-text.c (collect_attrs): initialize a
+	region by structure assignment instead of g_memdup().
+
+
+2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	* libbalsa/send.c (libbalsa_message_create_mime_message): do not
 	leak mime_type in error return paths; also reduce scope of
 	mime_type.
